adicion guia tipo empresa item y ajuste int
